--- a/apps/react-17/src/index.html
+++ b/apps/react-17/src/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
  <h1>from react </h1> 
+<div id="root">
+  
+</div>
+
+    <script type="module" src="./App.js">
+    </script>
   </body>
 </html>
