--- a/apps/react-17/src/index.html
+++ b/apps/react-17/src/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
   <head>
     <title>reacttttt</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link href="css/style.css" rel="stylesheet"> -->
+    <style>
+      .bg {
+        background-color: #242f40;
+        color: #fff;
+      }
+    </style>
   </head>
-  <body>
- <h1>from react </h1> 
-<div id="root">
-  
-</div>
+  <body class="bg">
+    <h1>from react</h1>
+    <div id="root"></div>
 
-    <script type="module" src="./App.js">
-    </script>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
