add custom Result comp

--- a/apps/react-17/src/index.html
+++ b/apps/react-17/src/index.html
@@ -4,7 +4,7 @@
     <title>reacttttt</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link href="css/style.css" rel="stylesheet"> -->
+    <link href="css/style.css" rel="stylesheet" />
     <style>
       .bg {
         background-color: #242f40;
@@ -13,9 +13,7 @@
     </style>
   </head>
   <body class="bg">
-    <h1>from react</h1>
     <div id="root"></div>
-
     <script type="module" src="./App.js"></script>
   </body>
 </html>
