--- a/apps/react-17/src/index.html
+++ b/apps/react-17/src/index.html
@@ -13,6 +13,7 @@
     </style>
   </head>
   <body class="bg">
+    <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="./App.js"></script>
   </body>
