update todo | i3-wm

--- a/apps/react-ts/src/index.html
+++ b/apps/react-ts/src/index.html
@@ -15,6 +15,6 @@
   <body class="bg">
     <div id="modal"></div>
     <div id="root"></div>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./App.tsx"></script>
   </body>
 </html>
